<resources>
    <string name="app_name">Weather App</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="weather_today">Weather today</string>
    <string name="weather_history">Weather history</string>
    <string name="settings">Settings</string>
    <string name="communicate">Communicate</string>
    <string name="write_to_developer">Write to developer</string>
    <string name="about_app">About app</string>
    <string name="last_update">Last update:</string>
    <string name="loading">Loading</string>
    <string name="temperature_today">Temperature today:</string>
    <string name="error">Error</string>
    <string name="city">City</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="new_city">New city</string>
    <string name="enter_city">Enter city:</string>
    <string name="save">Tap to Save</string>
    <string name="tap_to_change_the_city">Tap to change the city.</string>
    <string name="temperature_measuring_system">Tap to change measuring System.</string>
    <string name="choose_measure_system">Choose measure system:</string>
    <string name="about_text">This application is the final project of the Android GeekUniversity course.</string>
    <string name="leader_label">Leader:</string>
    <string name="leader">Alexandr Anikin</string>
    <string name="github">GitHub:</string>
    <string name="theme">Theme:</string>
    <string name="massage">Massage:</string>
    <string name="send">Send</string>
    <string name="other">Other</string>
    <string name="last_update_parameters">Last update parameters.</string>
    <string name="gps">GPS</string>
    <string name="your_city_here">Your city here</string>
    <string name="exit">exit</string>

    <!--Weather params-->
    <string name="celsius_temp_sign">°C</string>
    <string name="fahrenheit_temp_sign">°F</string>
    <string name="celsius">Celsius</string>
    <string name="fahrenheit">Fahrenheit</string>
    <string name="max_temp">max:</string>
    <string name="min_temp">min:</string>
    <string name="humidity">Humidity:</string>
    <string name="pressure">Pressure:</string>
    <string name="percent">%</string>
    <string name="hpa">hPa</string>

    <!--Dialog massages-->
    <string name="greeting">Welcome to the Weather app.\nPlease enter your city.</string>
    <string name="empty_enter">Sorry, the input line is empty.\nEnter the city or use the GPS search feature.</string>
    <string name="not_found">Sorry, this city was not found.\nEnter the city again or use the GPS search feature.</string>
    <string name="other_error">Sorry, something went wrong.\nMassage from server:</string>
    <string name="try_again">Please try again.</string>
</resources>
