<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".activity.WriteToActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <android.support.design.widget.AppBarLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:title="@string/settings">

            <android.support.v7.widget.Toolbar
                android:id="@+id/write_to_toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/colorPrimary">

            </android.support.v7.widget.Toolbar>

        </android.support.design.widget.AppBarLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/theme"
            android:textAppearance="?android:attr/textAppearanceLarge" />
        <requestFocus />

        <EditText
            android:id="@+id/write_to_theme"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            >
        </EditText>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/massage"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <EditText
            android:id="@+id/write_to_massage"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="top"
            android:inputType="textMultiLine"
            android:lines="5" />

        <Button
            android:id="@+id/write_to_sendBtn"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/send" />

    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>