<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:orientation="vertical"
    android:padding="8dp">

    <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/frag_info_cardView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:elevation="1dp"
        card_view:cardBackgroundColor="@color/cardview_light_background"
        card_view:cardCornerRadius="10dp"
        card_view:cardElevation="15dp"
        card_view:contentPadding="10dp"
        card_view:contentPaddingBottom="20dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/today_temp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true">

                <TextView
                    android:id="@+id/today_temp_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="12323"
                    android:textSize="45sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/celsius_temp_sign"
                    android:textSize="45sp" />

            </LinearLayout>

            <TextView
                android:id="@+id/today_weather_params"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/today_temp"
                android:layout_centerHorizontal="true"
                android:textSize="45sp" />

            <LinearLayout
                android:id="@+id/today_temp_params"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/today_weather_params"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/today_temp_max"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/max_temp"
                    android:textSize="25sp" />

                <TextView
                    android:id="@+id/today_temp_max_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="12"
                    android:textSize="25sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/celsius_temp_sign"
                    android:textSize="25sp" />

                <TextView
                    android:id="@+id/today_temp_min"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/min_temp"
                    android:textSize="25sp" />

                <TextView
                    android:id="@+id/today_temp_min_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="12"
                    android:textSize="25sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/celsius_temp_sign"
                    android:textSize="25sp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/today_hum_params"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/today_temp_params"
                android:layout_centerHorizontal="true"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/today_hum"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/humidity"
                    android:textSize="25sp" />

                <TextView
                    android:id="@+id/today_hum_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="25sp" />

                <TextView
                    android:id="@+id/today_hum_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/percent"
                    android:textSize="25sp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/today_pres_params"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/today_hum_params"
                android:layout_centerHorizontal="true"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/today_pres"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pressure"
                    android:textSize="25sp" />

                <TextView
                    android:id="@+id/today_pres_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="25sp" />

                <TextView
                    android:id="@+id/today_pres_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/hpa"
                    android:textSize="25sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/last_update"/>

                <TextView
                    android:id="@+id/today_last_upd"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </LinearLayout>

        </RelativeLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>